--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,14 @@ before_install:
 script:
   - docker run -e CI=true camdenfischer/docker-react npm run test -- --coverage
  
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-northeast-1"
+  app: "docker-react-course"
+  env: "Dockerreactcourse-env"
+  bucket_name: "elasticbeanstalk-ap-northeast-1-733161913412"
+  bucket_path: "docker-react-course"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
