--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
  
 deploy:
   provider: elasticbeanstalk
-  region: "ap-northeast-1"
+  region: "us-east-1"
   app: "docker-react-course"
   env: "Dockerreactcourse-env"
-  bucket_name: "elasticbeanstalk-ap-northeast-1-733161913412"
+  bucket_name: "elasticbeanstalk-us-east-1-733161913412"
   bucket_path: "docker-react-course"
   on:
     branch: master
